# StratiumEngine

./: .gitattributes  .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE.txt  README.md
StratiumEngine.Core/: CMakeLists.txt  StratiumEngine.Core.cpp  StratiumEngine.Core.h
StratiumEngine.Core/include/StratiumEngine/Core/: Config.hpp  Core.hpp  Types.hpp
StratiumEngine.Core/include/StratiumEngine/ECS/: ECS.hpp
StratiumEngine.Core/include/StratiumEngine/Events/: Events.hpp
StratiumEngine.Core/include/StratiumEngine/Input/: InputManager.h
StratiumEngine.Core/include/StratiumEngine/Logging/: Logging.hpp
StratiumEngine.Core/include/StratiumEngine/Memory/: Memory.hpp
StratiumEngine.Core/src/ECS/: ECS.cpp
StratiumEngine.Core/src/Events/: Events.cpp
StratiumEngine.Core/src/Logging/: Logger.cpp
StratiumEngine.Core/src/Memory/: Memory.cpp
